# hartek-scada-dashboard

./: .gitignore  README.md  pyproject.toml  render.yaml  requirements.txt  start.bat  stop.bat
backend/: app.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  AuthContext.jsx
frontend/src/api/: index.js
frontend/src/components/: Header.jsx  InverterAnalytics.jsx  InverterGraph.jsx  KPICards.jsx  Layout.jsx  MFMSection.jsx  PerformanceAnalytics.jsx  PerformanceGauge.jsx  PlantOverview.jsx  Sidebar.jsx  WeatherDashboard.jsx
frontend/src/pages/: Annunciator.jsx  Dashboard.jsx  EnergyMeter.jsx  Inverters.jsx  Login.jsx  Reports.jsx  Settings.jsx  Weather.jsx
