[tool.poetry]
name = "hartek-scada-dashboard"
version = "1.0.0"
description = "Hartek 5 MW Solar SCADA Dashboard"
authors = ["Subhojit Ghosh"]

[tool.poetry.dependencies]
python = "^3.11"
flask = ">=3.0"
requests = ">=2.31"
gunicorn = ">=21.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
